@@ -26,6 +26,11 @@ WriteMakefile(
           })
     ),
 
+    ($mm_ver >= 6.31
+        ? (LICENSE => 'perl_5')
+        : ()
+    ),
+
     ($mm_ver >= 6.48
         ? (MIN_PERL_VERSION => 5.006)
         : ()
