@@ -4,6 +4,7 @@ Revision history for Perl module Deep::Hash::Utils
     - Fixed abstract to follow the CPAN convention
     - Specified min perl version 5.6.0 in metadata & .pm
     - Added github repo to metadata and doc
+    - Specified license type as 'perl_5' in metadata
 
 0.02 2012-07-06
 
